tests/NormalTests/paczka1/fuzzy1/15887511.err
Error in line 10: 14PtkAgKtJ S690 226,7
Error in line 11: 14PtkAgKtJ S888 88,3
Error in line 19: EmVSk9 A944 0,22
Error in line 16: S690 A457 27,8
Error in line 21: S690 S888 27,2
Error in line 17: EmVSk9 A944 16,9
Error in line 26: wQlESM5HUO A944 168,0
Error in line 38: S690 S690 95,01
Error in line 39: EmVSk9 S690 271,23
Error in line 34: EmVSk9 S690 69,2
